<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuhuActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="7dp"
        android:src="@mipmap/ic_suhu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/suhu"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/celcius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/changa_semibold"
        android:text="@string/celcius"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/in_celcius"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/changa"
        android:hint="@string/hint_celcius"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/celcius"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/convertbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/changa_semibold"
        android:onClick="konversisuhu"
        android:text="Convert"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_celcius" />

    <TextView
        android:id="@+id/reamur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="87dp"
        android:fontFamily="@font/changa_semibold"
        android:text="@string/reamur"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celcius" />

    <EditText
        android:id="@+id/in_reamur"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/changa"
        android:hint="@string/hint_reamur"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/reamur"
        app:layout_constraintTop_toBottomOf="@+id/convertbtn" />

    <TextView
        android:id="@+id/fahrenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/changa_semibold"
        android:text="@string/farenheit"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reamur" />

    <EditText
        android:id="@+id/in_fahrenheit"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/changa"
        android:hint="@string/hint_farenheit"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/fahrenheit"
        app:layout_constraintTop_toBottomOf="@+id/in_reamur" />

    <TextView
        android:id="@+id/kelvin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/changa_semibold"
        android:text="@string/kelvin"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fahrenheit" />

    <EditText
        android:id="@+id/in_kelvin"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/changa"
        android:hint="@string/hint_kelvin"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/kelvin"
        app:layout_constraintTop_toBottomOf="@+id/in_fahrenheit" />

</android.support.constraint.ConstraintLayout>